enable pre-commit properly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,11 @@ classifiers = [
     "Typing :: Typed",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pre-commit>=2.20",
+]
+
 [project.scripts]
 dwind = "dwind.run:app"
 
